--- a/Dragons/Dragons.vcxproj
+++ b/Dragons/Dragons.vcxproj
@@ -365,6 +365,7 @@
     <ClInclude Include="Helper\decimal.h" />
     <ClInclude Include="Helper\Event.h" />
     <ClInclude Include="Helper\Functions.h" />
+    <ClInclude Include="Helper\ListUtils.h" />
     <ClInclude Include="Helper\Navigation.h" />
     <ClInclude Include="Helper\ResourceManager.h" />
     <ClInclude Include="Helper\StringHelper.h" />
