--- a/Dragons/Dragons.vcxproj
+++ b/Dragons/Dragons.vcxproj
@@ -93,6 +93,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -108,6 +109,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -247,6 +249,8 @@
     <ClCompile Include="OldDragons.cpp" />
     <ClCompile Include="Scenes\ConnectionScene.cpp" />
     <ClCompile Include="Scenes\EntryScene.cpp" />
+    <ClCompile Include="Scenes\GameEndScene.cpp" />
+    <ClCompile Include="Scenes\IntroScene.cpp" />
     <ClCompile Include="Scenes\Scene.cpp" />
     <ClCompile Include="Window\DisplayWindow.cpp" />
   </ItemGroup>
@@ -378,6 +382,8 @@
     <ClInclude Include="Helper\Time.h" />
     <ClInclude Include="Scenes\ConnectionScene.h" />
     <ClInclude Include="Scenes\EntryScene.h" />
+    <ClInclude Include="Scenes\GameEndScene.h" />
+    <ClInclude Include="Scenes\IntroScene.h" />
     <ClInclude Include="Scenes\Scene.h" />
     <ClInclude Include="Window\DisplayWindow.h" />
     <ClInclude Include="Window\DragDropEventHandler.h" />
